uidir = $(datadir)/$(PACKAGE)/ui

dist_ui_DATA = \
	dialog.add_torrent.glade \
	dialog.temporary_action.glade \
	preferences.client.gui.glade \
	preferences.client.gui.misc.glade \
	preferences.client.gui.status_bar.glade
	preferences.daemon.automation.glade \
	preferences.daemon.network.glade \
	preferences.daemon.network.ip_filter.glade \
	preferences.daemon.network.misc.glade \
	torrent_info_tabs.details.glade \
	torrent_info_tabs.details_compact.glade

