SUBDIRS = forwards gtk

noinst_LIBRARIES = libmlib.a

libmlib_a_SOURCES = \
	async_fs.cpp \
	async_fs.hpp \
	errors.cpp \
	errors.hpp \
	fs.cpp \
	fs.hh \
	fs.hpp \
	fs_watcher.cpp \
	fs_watcher.hpp \
	libtorrent.cpp \
	libtorrent.hh \
	libtorrent.hpp \
	messages.cpp \
	messages.hh \
	messages.hpp \
	misc.cpp \
	misc.hh \
	misc.hpp \
	mlib.hpp \
	string.cpp \
	string.hh \
	string.hpp \
	types.cpp \
	types.hpp

libmlib_a_CPPFLAGS = @MLIB_CPPFLAGS@

