SUBDIRS = base gtk

noinst_LIBRARIES = libmlib.a

libmlib_a_SOURCES = \
	async_fs.cpp \
	async_fs.hpp \
	dbus.cpp \
	dbus.hpp \
	fs.cpp \
	fs.hpp \
	fs_watcher.cpp \
	fs_watcher.hpp \
	libconfig.cpp \
	libconfig.hpp \
	libtorrent.cpp \
	libtorrent.hpp \
	libtorrent.hxx \
	main.hpp \
	misc.cpp \
	misc.hpp \
	misc.hxx \
	string.cpp \
	string.hpp \
	sys.cpp \
	sys.hh \
	sys.hpp

libmlib_a_CPPFLAGS = @MLIB_CPPFLAGS@

