SUBDIRS = libs_forwards

noinst_LIBRARIES = libmlib_base.a

libmlib_base_a_SOURCES = \
	base.cpp \
	base.hh \
	base.hpp \
	exception.cpp \
	exception.hpp \
	format.cpp \
	format.hh \
	format.hpp \
	libs_forwards.hpp \
	messages.cpp \
	messages.hh \
	messages.hpp

libmlib_base_a_CPPFLAGS = @MLIB_CPPFLAGS@
libmlib_base_a_CFLAGS = @MLIB_CFLAGS@
libmlib_base_a_CXXFLAGS = @MLIB_CXXFLAGS@

