noinst_LIBRARIES = libmlib_gtk.a

libmlib_gtk_a_SOURCES = \
	controlled_list.cpp \
	controlled_list.hpp \
	dialog.cpp \
	dialog.hpp \
	glade.cpp \
	glade.hh \
	glade.hpp \
	misc.cpp \
	misc.hh \
	misc.hpp \
	paned.cpp \
	paned.hpp \
	paned_settings.cpp \
	paned_settings.hpp \
	toolbar.cpp \
	toolbar.hpp \
	tree_view.cpp \
	tree_view.hh \
	tree_view.hpp \
	tree_view_settings.cpp \
	tree_view_settings.hpp \
	types.hpp \
	vbox.cpp \
	vbox.hpp \
	window.cpp \
	window.hpp \
	window_settings.cpp \
	window_settings.hpp

libmlib_gtk_a_CPPFLAGS = @MLIB_CPPFLAGS@

