noinst_LIBRARIES = libmlib_gtk.a

libmlib_gtk_a_SOURCES = \
	action.cpp \
	action.hpp \
	controlled_list.cpp \
	controlled_list.hpp \
	dialog.cpp \
	dialog.hpp \
	dispatcher.cpp \
	dispatcher.hh \
	dispatcher.hpp \
	dispatcher.hxx \
	glade.cpp \
	glade.hh \
	glade.hpp \
	glade.hxx \
	link_button.cpp \
	link_button.hpp \
	main.cpp \
	main.hpp \
	misc.cpp \
	misc.hh \
	misc.hpp \
	misc.hxx \
	paned.cpp \
	paned.hpp \
	paned_settings.cpp \
	paned_settings.hpp \
	signal_proxy.hh \
	signal_proxy.hpp \
	signal_proxy.hxx\
	toolbar.cpp \
	toolbar.hpp \
	tree_view.cpp \
	tree_view.hh \
	tree_view.hpp \
	tree_view_settings.cpp \
	tree_view_settings.hpp \
	vbox.cpp \
	vbox.hpp \
	window.cpp \
	window.hpp \
	window_settings.cpp \
	window_settings.hpp

libmlib_gtk_a_CPPFLAGS = @MLIB_CPPFLAGS@

